# pasv

./: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .ocamlformat  Dockerfile  Dockerfile.build_static  Gemfile  LICENSE  Makefile  README.md  dune-project  group_proteins.c  pasv  pasv.opam  pasv.opam.locked  split_seqs.c
.github/workflows/: build_and_test.yml  build_and_test_static.yml  generate_docs.yml
_docs_src/: mkdocs.yml
_docs_src/src/: bibliography.md  cli.md  examples-aox-ptox.md  examples-pasv-check.md  examples-pasv-hmm.md  examples-pasv-msa.md  getting-started.md  index.md  installing-external-dependencies.md  installing-from-source.md  installing-precompiled-binaries.md  installing-with-docker.md  jargon.md  pasv-output.md  pasv-use-cases.md  picking-refs-and-residues.md  todo.md  tons-of-examples.md  why-use-pasv.md
_examples/aox_ptox/: README.md  run_pasv_aox.sh
_examples/pasv_select/: queries.fa  signatures.tsv
_scripts/build_helpers/: README.md  bin_dune_static  build_alpine_static_docker  build_and_test_static  build_static  make_patch
_scripts/docker/: pasv_docker  pasv_docker_sh  sudo_pasv_docker  sudo_pasv_docker_sh
_scripts/networks/: config-aox.edn  parse-pasv-types.clj
docs/: 404.html  index.html  robots.txt  search.html  sitemap.xml
docs/bibliography/: index.html
docs/cli/: index.html
docs/examples-aox-ptox/: index.html
docs/examples-pasv-check/: index.html
docs/examples-pasv-hmm/: index.html
docs/examples-pasv-msa/: index.html
docs/examples-pasv-select/: index.html
docs/getting-started/: index.html
docs/installing-external-dependencies/: index.html
docs/installing-from-source/: index.html
docs/installing-precompiled-binaries/: index.html
docs/installing-with-docker/: index.html
docs/jargon/: index.html
docs/pasv-output/: index.html
docs/pasv-use-cases/: index.html
docs/picking-refs-and-residues/: index.html
docs/search/: search_index.json
docs/todo/: index.html
docs/tons-of-examples/: index.html
examples/aox_ptox/: README.md  run_pasv_ptox.sh
lib/: check_alignment.ml  cli.ml  dune  fname.ml  mod.ml  pasv.ml  runners.ml  sig_file_column.ml  spanning.ml  utils.ml  verbosity.ml  version.ml
scripts/: group_and_partition  group_and_partition.rb  pasv_longest_gap  to_html.rb
src/: ai_pvcpipe.c  aln.c  aln.h  err_codes.h  group_seqs.c  partition_seqs.c  pasv.c  rseq.c  rseq.h  split_seqs.c  tommy_helper.h
test/: dune
test_files/: 03_references.fasta  16_references.fasta  amk_queries.faa  amk_ref.faa  queries.fa  refs.fa
(+131 files in other folders)
